<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <Button
        android:id="@+id/button_pizza"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:background="@drawable/button_1"
        android:drawableTop="@mipmap/ic_launcher_round"
        android:text="@string/taste1_pizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <Button
        android:id="@+id/button_frenchfries"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:background="@drawable/button_1"
        android:drawableTop="@mipmap/ic_launcher_round"
        android:text="@string/taste1_fries"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <Button
        android:id="@+id/button_nuggets"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_1"
        android:drawableTop="@mipmap/ic_launcher_round"
        android:text="@string/taste1_nuggets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_caramel"
        app:layout_constraintVertical_bias="0.187"
        android:layout_marginBottom="56dp" />

    <Button
        android:id="@+id/button_kebabmix"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:background="@drawable/button_1"
        android:drawableTop="@mipmap/ic_launcher_round"
        android:text="@string/taste1_kebabmix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="207dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_pizza"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_pita"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_1"
        android:drawableTop="@mipmap/ic_launcher_round"
        android:text="@string/taste1_pita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_frenchfries"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginBottom="207dp" />


    <TextView
        android:id="@+id/text_what"
        android:layout_width="363dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:hint="@string/top_text"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="25dp"
        app:layout_constraintHorizontal_bias="0.523" />

</android.support.constraint.ConstraintLayout>