<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eth.cravecontrol.cravecontrol.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <Button
        android:id="@+id/button_sweet"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:background="@drawable/button_1"
        android:drawableTop="@mipmap/main_salty"
        android:onClick="taste_sweet"
        android:text="@string/tastes_sweet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <Button
        android:id="@+id/button_salty"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:background="@drawable/button_1"
        android:drawableTop="@mipmap/main_sweet"
        android:onClick="taste_salty"
        android:text="@string/tastes_salty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <Button
        android:id="@+id/button_greasy"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_1"
        android:drawableTop="@mipmap/main_greasy"
        android:onClick="taste_greasy"
        android:text="@string/tastes_greasy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_salty"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/button_sour"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_1"
        android:drawableTop="@mipmap/main_sour"
        android:onClick="taste_sour"
        android:text="@string/tastes_sour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sweet"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/button_other"
        android:layout_width="145dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_1"
        android:drawableTop="@mipmap/main_bitter"
        android:onClick="taste_other"
        android:text="@string/tastes_other"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sour"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/text_what"
        android:layout_width="368dp"
        android:layout_height="62dp"
        android:gravity="center"
        android:hint="@string/top_text"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_sweet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="236dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_other"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
