<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="AltScreenVariables" type="com.eth.cravecontrol.cravecontrol.TypeOfFood.AltScreenVariables"/>
    </data>

 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">

     <TextView
     android:id="@+id/textView2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentEnd="true"
     android:layout_alignParentRight="true"
     android:layout_marginEnd="146dp"
     android:layout_marginRight="146dp"
     android:layout_marginTop="105dp"
     android:fontFamily="serif"
     android:text=""
     android:textSize="14sp" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="25dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="21dp"
         android:text="@string/Header_altscreen"
         android:textSize="25sp" />

     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:text="@{AltScreenVariables.type}"
         android:textSize="30sp"
         android:layout_alignBaseline="@+id/textView3"
         android:layout_alignBottom="@+id/textView3"
         android:layout_toRightOf="@+id/textView11"
         android:layout_toEndOf="@+id/textView11" />

     <TextView
     android:id="@+id/textView5"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
         android:text="@string/Calories"
     android:textSize="18sp"
         android:layout_marginTop="14dp"
         android:layout_below="@+id/textView3"
         android:layout_toRightOf="@+id/textView16"
         android:layout_toEndOf="@+id/textView16" />
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@{AltScreenVariables.calories}"
         android:textSize="18sp"
         android:layout_alignBottom="@+id/textView5"
         android:layout_alignTop="@+id/textView5"
         android:layout_alignRight="@+id/textView26"
         android:layout_alignEnd="@+id/textView26"
         android:layout_toEndOf="@+id/textView5"
         android:layout_toRightOf="@+id/textView5" />

     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Carbs"
         android:textSize="18sp"
         android:layout_below="@+id/textView5"
         android:layout_alignLeft="@+id/textView5"
         android:layout_alignStart="@+id/textView5" />
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@{AltScreenVariables.carbs}"
         android:textSize="18sp"
         android:layout_alignBaseline="@+id/textView7"
         android:layout_alignBottom="@+id/textView7"
         android:layout_alignRight="@+id/textView6"
         android:layout_alignEnd="@+id/textView6"
         android:layout_toEndOf="@+id/textView7"
         android:layout_toRightOf="@+id/textView7" />

     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/CarbsSugar"
         android:textSize="18sp"
         android:layout_below="@+id/textView7"
         android:layout_alignLeft="@+id/textView7"
         android:layout_alignStart="@+id/textView7" />
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@{AltScreenVariables.carbsSugar}"
         android:textSize="18sp"
         android:layout_alignBaseline="@+id/textView9"
         android:layout_alignBottom="@+id/textView9"
         android:layout_toRightOf="@+id/textView9"
         android:layout_toEndOf="@+id/textView9" />

     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Fat"
         android:textSize="18sp"
         android:layout_below="@+id/textView9"
         android:layout_alignLeft="@+id/textView9"
         android:layout_alignStart="@+id/textView9" />
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@{AltScreenVariables.fat}"
         android:textSize="18sp"
         android:layout_alignBottom="@+id/textView11"
         android:layout_alignRight="@+id/textView8"
         android:layout_alignEnd="@+id/textView8"
         android:layout_toEndOf="@+id/textView11"
         android:layout_toRightOf="@+id/textView11" />

     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Energy"
         android:textSize="18sp"
         android:layout_below="@+id/textView11"
         android:layout_alignLeft="@+id/textView11"
         android:layout_alignStart="@+id/textView11" />
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@{AltScreenVariables.energy}"
         android:textSize="18sp"
         android:layout_alignBottom="@+id/textView13"
         android:layout_alignRight="@+id/textView12"
         android:layout_alignEnd="@+id/textView12"
         android:layout_toRightOf="@+id/textView13"
         android:layout_toEndOf="@+id/textView13" />

     <TextView
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView7"
         android:layout_alignLeft="@+id/textView3"
         android:layout_alignStart="@+id/textView3"
         android:text="@string/Info"
         android:textSize="18sp" />

     <TextView
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView15"
         android:layout_alignStart="@+id/textView15"
         android:text="@{AltScreenVariables.info}"
         android:layout_alignBottom="@+id/textView13"
         android:layout_toStartOf="@+id/button_no"
         android:layout_below="@+id/textView5" />

     <TextView
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
         android:text="@string/Header_altscreen1"
         android:textSize="24sp"
         android:layout_below="@+id/textView16"
         android:layout_alignLeft="@+id/textView16"
         android:layout_alignStart="@+id/textView16" />

     <TextView
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView17"
         android:layout_toEndOf="@+id/textView17"
         android:text="@{AltScreenVariables.typeAlt}"
         android:textSize="24sp"
         android:layout_toRightOf="@+id/textView17" />

     <TextView
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Calories"
         android:textSize="18sp"
         android:layout_marginTop="16dp"
         android:layout_below="@+id/textView18"
         android:layout_alignLeft="@+id/textView13"
         android:layout_alignStart="@+id/textView13" />

     <TextView
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView19"
         android:layout_alignStart="@+id/textView19"
         android:layout_below="@+id/textView19"
         android:text="@string/Carbs"
         android:textSize="18sp" />

     <TextView
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView20"
         android:layout_alignStart="@+id/textView20"
         android:layout_below="@+id/textView20"
         android:text="@string/CarbsSugar"
         android:textSize="18sp" />

     <TextView
         android:id="@+id/textView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView21"
         android:layout_alignStart="@+id/textView21"
         android:layout_below="@+id/textView21"
         android:text="@string/Fat"
         android:textSize="18sp" />

     <TextView
         android:id="@+id/textView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView22"
         android:layout_alignStart="@+id/textView22"
         android:layout_below="@+id/textView22"
         android:text="@string/Energy"
         android:textSize="18sp" />

     <TextView
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView20"
         android:layout_alignLeft="@+id/textView17"
         android:layout_alignStart="@+id/textView17"
         android:text="@string/Info"
         android:textSize="18sp" />

     <TextView
         android:id="@+id/textView25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView24"
         android:layout_alignStart="@+id/textView24"
         android:layout_below="@+id/textView24"
         android:text="@{AltScreenVariables.infoAlt}"
         android:layout_alignBottom="@+id/textView23"
         android:layout_toStartOf="@+id/button_no"
         android:layout_toLeftOf="@+id/button_no" />


     <Button
         android:id="@+id/button_yes"
         android:layout_width="145dp"
         android:layout_height="120dp"
         android:layout_alignBaseline="@+id/button_no"
         android:layout_alignBottom="@+id/button_no"
         android:layout_alignLeft="@+id/textView25"
         android:layout_alignStart="@+id/textView25"
         android:background="@drawable/button_1"
         android:drawableTop="@mipmap/ic_launcher_round"
         android:onClick="onClickYesNo"
         android:text="@string/button_yes" />

     <Button
         android:id="@+id/button_no"
         android:layout_width="145dp"
         android:layout_height="120dp"
         android:background="@drawable/button_1"
         android:drawableTop="@mipmap/ic_launcher_round"
         android:onClick="onClickYesNo"
         android:text="@string/button_no"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/textView26"
         android:layout_alignRight="@+id/textView26"
         android:layout_alignEnd="@+id/textView26"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp" />

     <TextView
         android:id="@+id/textView26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Header_altscreen2"
         android:textSize="20sp"
         android:layout_below="@+id/textView23"
         android:layout_centerHorizontal="true" />

     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/textView19"
         android:text="@{AltScreenVariables.caloriesAlt}"
         android:textSize="18sp"
         android:layout_alignRight="@+id/textView26"
         android:layout_alignEnd="@+id/textView26"
         android:layout_alignTop="@+id/textView19"
         android:layout_alignBottom="@+id/textView19" />

     <TextView
         android:id="@+id/textView27"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView21"
         android:layout_toRightOf="@+id/textView20"
         android:text="@{AltScreenVariables.carbsAlt}"
         android:textSize="18sp"
         android:layout_alignRight="@+id/textView"
         android:layout_alignEnd="@+id/textView"
         android:layout_below="@+id/textView19" />

     <TextView
         android:id="@+id/textView28"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView27"
         android:text="@{AltScreenVariables.carbsSugarAlt}"
         android:textSize="18sp"
         android:layout_alignBottom="@+id/textView21"
         android:layout_toRightOf="@+id/textView21"
         android:layout_alignRight="@+id/textView14"
         android:layout_alignEnd="@+id/textView14" />

     <TextView
         android:id="@+id/textView29"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView23"
         android:text="@{AltScreenVariables.fatAlt}"
         android:textSize="18sp"
         android:layout_below="@+id/textView21"
         android:layout_toLeftOf="@+id/textView28"
         android:layout_toRightOf="@+id/textView22"
         android:layout_toEndOf="@+id/textView22" />

     <TextView
         android:id="@+id/textView30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView23"
         android:text="@{AltScreenVariables.energyAlt}"
         android:textSize="18sp"
         android:layout_above="@+id/textView26"
         android:layout_toLeftOf="@+id/textView29"
         android:layout_toEndOf="@+id/textView23"
         android:layout_toRightOf="@+id/textView23" />


 </RelativeLayout>
</layout>
